forum/skins/default/media/style/style.css
/* ... */
.comment-form-buttons {
    width: 18%;
    height: 100%;
    float: right;
}

.comment-form-buttons input, .user-prompt .prompt-buttons button {
    height: 16px;
    line-height: 12px;
    font-size: 110%;
    border: 1px solid #999;
}

.comment-form-buttons input {
    width: 100%;
    height: 22px;
    vertical-align: middle;
    margin-top: 6px;
}

.comments-char-left-count.warn {
    color: orange;
}

#ask-related-questions {
    max-height: 150px;
    overflow-y: auto;
}

.context-menu {
    position: relative;
}

div.dialog, .context-menu-dropdown {
    position: absolute;
    background-color: #EEEEEE;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-box-shadow: 2px 2px 5px #3060A8;
    -webkit-box-shadow: 2px 2px 5px #3060A8;
}

.context-menu-dropdown {
    display: none;
    right: 0px;
    top: 1.5em;
    text-align: left;
    list-style-type: none;
    z-index: 500;
}

.context-menu-dropdown li.item {
    padding: 4px 8px 4px 8px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

.context-menu-dropdown li.item a {
    color: inherit;
    white-space: nowrap;
    text-decoration: none;
}

.context-menu-dropdown li.separator {
    text-align: center;
    padding: 10px 0 4px 0;
    font-size: 120%;
    font-weight: bold;
}

.context-menu-dropdown li.item:hover {
    background-color: #3060A8;
    color: white;
}

.context-menu-dropdown span {
    margin-right: 4px;
    float: left;
    width: 16px;
    height: 16px;
}

.context-menu-trigger {
    cursor: pointer;
}

div.dialog .dialog-content {
    padding: 12px 12px 42px 12px;
    z-index: 1000;
}

div.dialog .dialog-buttons {
    margin: 0px;
    height: 25px;
    text-align: center;
    position: absolute;
    bottom: 0px;
    left: 0px;
    width: 100%;
}

.dialog-yes, .dialog-no {
    padding: 0px 5px;
    margin: 0 3px 5px 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    background-color: #3060A8;
    color: white;
    line-height: 20px;
    vertical-align: baseline;
    font-weight: bold;
    border: 0;
}

div.dialog.confirm, div.dialog.warning {
    text-align: center;
}

div.dialog.confirm {
    font-size: 140%;
    font-weight: bold;
}

div.dialog.prompt {
    width: 355px;
}

div.dialog.prompt .dialog-content select, div.dialog.prompt .dialog-content textarea, div.dialog.prompt .dialog-content input[type=text] {
    width: 100%;
    padding: 0;
    border: 0;
}

.user-prompt .prompt-buttons {
    text-align: right;
}

.suspended-user {
    text-decoration: line-through;
}

.feed-icon {
    width: 14px;
    height: 14px;
    display: inline-block;
}

div#subscription_list {
    width: 100%;
    /*float:left;*/
}

.subscription_switch {
    display: inline-block;
    zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
    *display: inline;
    vertical-align: baseline;
    margin: 0 2px;
    outline: none;
    cursor: pointer;
    text-align: center;
    text-decoration: none;
    font: 11px Arial, Helvetica, sans-serif;
    padding: .2em 1em .275em;
    text-shadow: 0 1px 1px rgba(0,0,0,.3);
    -webkit-border-radius: .5em;
    -moz-border-radius: .5em;
    border-radius: .5em;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
    box-shadow: 0 1px 2px rgba(0,0,0,.2);
    color: #101010 !important;
    border: solid 1px #b7b7b7;
    background: #fff;
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
    background: -moz-linear-gradient(top,  #fff,  #ededed);
    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');
}
.subscription_switch:hover {
    text-decoration: none;
    background: #ededed;
    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dcdcdc));
    background: -moz-linear-gradient(top,  #fff,  #dcdcdc);
    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dcdcdc');
    color: #101010 !important;
}
.subscription_switch:active {
    position: relative;
    top: 1px;
    background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#fff));
    background: -moz-linear-gradient(top,  #ededed,  #fff);
    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#ffffff');
}

div.subscription_summary {
    border-top: 2px dotted #CCCCCE;
    overflow: hidden;
    padding: 3px 0px 5px 0;
    position: relative;
    width:100%;
    margin-top: 5px;
}

div.subscription_title {
    /*float:left;
    line-height:30px;*/
    margin-top: 5px;
    font-size: 16px;
    font-weight:bold;
}

a.subscription_unsubscribe_button {
    float:left;
    font-size: 11px;
    font-weight:bold;

    margin-right:15px;
    margin-top: 5px;
}

div.subscription_userinfo {
    float:right;
}

div.subscription_tags {
    font-family: sans-serif;
    float:left;
}
div.subscription_tags a, span.tag {
    background-color: #EEEEEE;
    border-bottom: 1px solid #CCCCCC;
    border-right: 1px solid #CCCCCC;
    color: #777777;
    font-size: 11px;
    font-weight: normal;
    padding: 1px 8px;
    text-decoration: none;
    white-space: nowrap;
}
div.subscription_tags a:hover {
    background-color: #356FCB;
    color: #FFFFFF;
}

div.wmd-button {
    color:white;
}
div.wmd-button-bar {
    float:left;
}

